--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <div class="wrapper">
 	<header>
 		<h1>Booktastic</h1>
-		<% form_tag search_bookmarks_path, :method => :get, :class => "search-form" do %>
+		<%= form_tag search_bookmarks_path, :method => :get, :class => "search-form" do %>
 		  <%= text_field_tag :query, params[:query] %>
 		  <input type="submit" value="Search" class="button" />
 		<% end %>
